--- a/client/src/pages/signup.css
+++ b/client/src/pages/signup.css
@@ -1,29 +1,34 @@
+/* Dunk or Flunk title  */
 h1{
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
     color: orange;
-    margin-top: 16rem;
-    margin-bottom: -2rem;
+    margin-top: 14rem;
+    margin-bottom: -1rem;
     font-weight: bolder;
     text-decoration: underline;
 }
+/* login title */
 h2{
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
     color: red;
-    
     font-weight: bolder;
+    text-decoration: underline;
 }
-
+/* username/password */
 form{
     text-align: center;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: monospace;
 }
 /* p = link to login */
 p{
     text-align: center;
     margin:2rem;
     font-weight: 700;
+    margin-left: 3rem;
+    font-size: xx-large;
+    font-family: monospace;
 }
 /* image for background */
 #signupContainer{
@@ -39,6 +44,7 @@ p{
 color: red;
 font-size: large;
 font-weight: 800;
+border:dashed
 }
 .uk-card-body{
     margin-top:-5rem;
