--- a/client/src/pages/Quiz.css
+++ b/client/src/pages/Quiz.css
@@ -17,8 +17,12 @@
  text-decoration: none;
 }
 
+.Quiz h2 {
+  margin-top: 6rem !important;
+}
+
 #header {
-  margin-top: 10px;
+  padding-top: 10px;
 }
 
 a:hover {
