--- a/client/src/pages/login.css
+++ b/client/src/pages/login.css
@@ -31,6 +31,7 @@ p{
     background-repeat: no-repeat;
     background-position: center;
     background-color: black;
+    cursor: url("https://img.icons8.com/color/50/000000/basketball.png"), auto;
   }
   /* submit button */
   .btn{
@@ -38,4 +39,5 @@ p{
       font-size: large;
       font-weight: 800;
       border: dashed;
+      cursor: url("https://img.icons8.com/color/50/000000/basketball.png"), auto;
   }
