--- a/client/src/pages/signup.css
+++ b/client/src/pages/signup.css
@@ -1,5 +1,5 @@
 /* Dunk or Flunk title  */
-h1{
+.Signup h1{
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
     color: orange;
