--- a/client/src/pages/signup.css
+++ b/client/src/pages/signup.css
@@ -9,7 +9,7 @@
     text-decoration: underline;
 }
 /* login title */
-h2{
+.Signup h2{
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
     color: red;
@@ -22,7 +22,7 @@ form{
     font-family: monospace;
 }
 /* p = link to login */
-p{
+.Signup p{
     text-align: center;
     margin:2rem;
     font-weight: 700;
