--- a/client/src/pages/signup.css
+++ b/client/src/pages/signup.css
@@ -9,13 +9,6 @@
     text-decoration: underline;
 }
 /* login title */
-.Signup h2{
-    text-align: center;
-    font-family: 'Courier New', Courier, monospace;
-    color: red;
-    font-weight: bolder;
-    text-decoration: underline;
-}
 /* username/password */
 form{
     text-align: center;
@@ -33,8 +26,8 @@ form{
 /* image for background */
 #signupContainer{
     color:black;
-    background-image: url("https://www.ecopetit.cat/wpic/mpic/165-1657200_baller-silhouette-photography-of-man-dunking-basketball-basketball.jpg");
-    background-size: contain;
+    background: url("https://cellularnews.com/wp-content/uploads/2020/03/basketball-dark-325x485.jpg");
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     background-color: black;
@@ -51,4 +44,26 @@ cursor: url("https://img.icons8.com/color/50/000000/basketball.png"), auto;
 .uk-card-body{
     margin-top:-5rem;
     cursor:url("https://img.icons8.com/color/50/000000/basketball.png"), auto;
+}
+
+#signup-logo {
+    margin-top: 45px;
+}
+
+#signup-head {
+    position: relative;
+    bottom: 17px;
+    color: #c82d2d;
+    text-decoration: none;
+
+}
+
+#signup-btn {
+    background-color: #c82d2d;
+    border: none;
+    color: white;
+}
+
+#gotologin {
+    color: #c82d2d;
 }
