--- a/client/src/pages/end.css
+++ b/client/src/pages/end.css
@@ -1,5 +1,6 @@
 .card-body {
     background-color: #c82d2d;
+    
 }
 
 #logo {
@@ -11,4 +12,8 @@
     color: white;
     text-align: center;
     text-decoration: none;
+}
+
+html{
+    cursor: url("https://img.icons8.com/color/50/000000/basketball.png"), auto;
 }
