--- a/client/src/pages/Quiz.css
+++ b/client/src/pages/Quiz.css
@@ -1,6 +1,7 @@
 .uk-card-footer {
   text-align: center;
 }
+.Quiz html { font-size: 1vw; }
 /* html { 
   background: url("https://images-na.ssl-images-amazon.com/images/I/61HUXDu6hFL._AC_SL1468_.jpg") no-repeat center center fixed; 
   -webkit-background-size: cover;
