--- a/client/src/pages/Home/home.css
+++ b/client/src/pages/Home/home.css
@@ -1,5 +1,9 @@
-.App {
+.homecontainer {
   text-align: center;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  position: absolute;
 }
 
 .App-intro {
@@ -7,16 +11,26 @@
 }
 
 #home-logo {
-  height: 200px;
-  width: 200px;
+  height: 250px;
+  width: 250px;
+  
+}
+
+#welcome {
+  margin-top: 5%;
+  
 }
 
 #logout {
   float: left;
+  color: black;
+  
 }
 
 #gotoprofile {
   float: right;
+  color: black;
+  
 }
 
 #playnowbtn {
@@ -25,22 +39,26 @@
   color: white;
   margin-top: 10%;
   margin-left: 10%;
+  
 }
 
 #viewhighbtn {
   background-color: lightskyblue;
   border: none;
   color: white;
+  
 }
 
 .homebtns {
-  margin-top: 20%;
+  margin-top: 25%;
   margin-left: 32%;
+  
 
 }
 
 #reminder {
-  margin-top: 10%;
+  margin-top: 60%;
+  
 }
 
 
