--- a/client/src/pages/Quiz.css
+++ b/client/src/pages/Quiz.css
@@ -51,8 +51,8 @@ a:hover {
   text-align: center;
 }
 
-@media only screen and (max-width: 320px) {
-  style-element {
-    font-size: 10px;
+/* @media only screen and (max-height: 1100px) {
+  #quizContainer {
+    height: 50%;
   }
-}
+} */
