center login and signup

--- a/client/src/pages/signup.css
+++ b/client/src/pages/signup.css
@@ -55,6 +55,7 @@ cursor: url("https://img.icons8.com/color/50/000000/basketball.png"), auto;
     bottom: 17px;
     color: #c82d2d;
     text-decoration: none;
+    text-align: center;
 
 }
 
