added in cursor to home page

--- a/client/src/pages/Home/home.css
+++ b/client/src/pages/Home/home.css
@@ -4,6 +4,7 @@
   height: 100%;
   overflow-x: hidden;
   position: absolute;
+  cursor: url("https://img.icons8.com/color/50/000000/basketball.png"), auto;
 }
 
 .App-intro {
