--- a/client/src/pages/Login/login.css
+++ b/client/src/pages/Login/login.css
@@ -25,6 +25,13 @@ form{
 } */
 /* image for background */
 #loginContainer{
+    position:fixed;
+    padding:0;
+    margin:0;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
     color:black;
     background: rgba(0,0,0,0.5) url("https://cellularnews.com/wp-content/uploads/2020/03/basketball-dark-325x485.jpg");
     background-size: cover;
