--- a/client/src/pages/Login/login.css
+++ b/client/src/pages/Login/login.css
@@ -25,21 +25,14 @@ form{
 } */
 /* image for background */
 #loginContainer{
-    position:fixed;
-    padding:0;
-    margin:0;
-    top:0;
-    left:0;
-    width: 100%;
-    height: 100%;
     color:black;
-    background: rgba(0,0,0,0.5) url("https://cellularnews.com/wp-content/uploads/2020/03/basketball-dark-325x485.jpg");
+    background: url("https://cellularnews.com/wp-content/uploads/2020/03/basketball-dark-325x485.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    background-color: black;
     cursor: url("https://img.icons8.com/color/50/000000/basketball.png"), auto;
-    
-}
+  }
   /* submit button */
   .btn{
       color: red;
