--- a/client/src/pages/EndQuiz/end.css
+++ b/client/src/pages/EndQuiz/end.css
@@ -19,6 +19,7 @@
 .text-center{
     text-align: center;
     font-family: 'Oswald', sans-serif;
+    margin-top: 4rem;
 }
 .container{
     cursor: url("https://img.icons8.com/color/50/000000/basketball.png"), auto;
