--- a/client/src/pages/EndQuiz/end.css
+++ b/client/src/pages/EndQuiz/end.css
@@ -11,6 +11,7 @@
     color: white;
     text-align: center;
     text-decoration: none;
+    font-family: 'Oswald', sans-serif;
 }
 .Hscore{color: yellow;}
 
