--- a/client/src/pages/EndQuiz/end.css
+++ b/client/src/pages/EndQuiz/end.css
@@ -24,6 +24,7 @@
     margin-top: 4rem;
     font-size: 52px;
     color: black;
+    text-transform: capitalize;
 }
 .container{
     cursor: url("https://img.icons8.com/color/50/000000/basketball.png"), auto;
