--- a/client/src/pages/Profile/profile.css
+++ b/client/src/pages/Profile/profile.css
@@ -30,12 +30,12 @@
     margin-top: -6%;
     font-family: 'Oswald', sans-serif;
     font-size: xxx-large;
-    color: white;
+    color: wheat;
   }
   
   #logout1{
     float: left;
-    color: #c82d2d;
+    color: white;
   }
   
   #gotoprofile {
