--- a/client/src/pages/Signup/signup.css
+++ b/client/src/pages/Signup/signup.css
@@ -1,7 +1,7 @@
 /* Dunk or Flunk title  */
 .Signup h1{
     text-align: center;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Oswald', sans-serif;
     color: orange;
     margin-top: 14rem;
     margin-bottom: -1rem;
@@ -12,8 +12,7 @@
 /* username/password */
 form{
     text-align: center;
-    font-family: monospace;
-}
+    font-family: 'Oswald', sans-serif;}
 /* p = link to login */
 /* .Signup p{
     text-align: center;
@@ -56,6 +55,7 @@ cursor: url("https://img.icons8.com/color/50/000000/basketball.png"), auto;
     color: #c82d2d;
     text-decoration: none;
     text-align: center;
+    font-family: 'Oswald', sans-serif;
 
 }
 
