--- a/client/src/pages/Quiz/Quiz.css
+++ b/client/src/pages/Quiz/Quiz.css
@@ -13,6 +13,7 @@
  color: white;
  text-shadow: 2px 2px red;
  text-decoration: none;
+ font-family: 'Oswald', sans-serif;
 }
 .Quiz h2 {
   margin-top: 6rem !important;
