--- a/client/src/pages/Profile/profile.css
+++ b/client/src/pages/Profile/profile.css
@@ -29,7 +29,7 @@
   #welcome{
     margin-top: -6%;
     font-family: 'Oswald', sans-serif;
-    font-size: xxx-large;
+    font-size: xx-large;
     color: wheat;
   }
   
